# Zippy-AI-project

./: CMakeLists.txt  Main.qml  README.md  ollamainterface.cpp  ollamainterface.h  programcontroller.cpp  programcontroller.h  resources.qrc
.github/workflows/: autobuild-windows.yml
include/: ollamainterface.h  programcontroller.h  threadworker.h
qml/: BuildingMaps.qml  Contact.qml  Events.qml  Main.qml  OllamaConfig.qml
src/: main.cpp  ollamainterface.cpp  programcontroller.cpp
